--- a/WWR/Site_Plan_Rafting.html
+++ b/WWR/Site_Plan_Rafting.html
@@ -44,8 +44,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/022b3a-1f7a8c-bfdbf7-e1e5f2-ffffff"
-      target="_blank">https://coolors.co/022b3a-1f7a8c-bfdbf7-e1e5f2-ffffff</a>
+    <a href="https://coolors.co/022b3a-1f7a8c-847979-e1e5f2-EE6352"
+      target="_blank">https://coolors.co/022b3a-1f7a8c-bfdbf7-e1e5f2-EE6352</a>
 
     <table class="colors">
       <tr>
@@ -56,10 +56,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">#022b3a</td>
+        <td class="secondary">#1f7a8c</td>
+        <td class="accent1">#bfdb7</td>
+        <td class="accent2">#EE6352</td>
       </tr>
     </table>
 
@@ -69,11 +69,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: [Quicksand]
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: [Quicksand]
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
