--- a/WWR/Site_Plan_Rafting.html
+++ b/WWR/Site_Plan_Rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>https://crumman.github.io/WDD_130/ Site Plan</h1>
+    <h1>http://127.0.0.1:5500/WWR/Site_Plan_Rafting.html Site Plan</h1>
     <h2> Joshua Pyle Jr</h2>
     <h2>WDD 130-WEB</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
