--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -33,7 +33,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="Images\1e43d8246e9981f78d9cf6ea898dad53--wiccan-symbols-viking-symbols.jpg" alt="Logo image" />
+    <img src="images/1e43d8246e9981f78d9cf6ea898dad53--wiccan-symbols-viking-symbols.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
