--- a/byui.html
+++ b/byui.html
@@ -7,10 +7,10 @@
   <body>
     <header>
       <nav>
-        <a href="byui.html">Home</a>
-        <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
-        <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
-        <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
+          <a id="active" href="http://index.html">Home</a>
+          <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
+          <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
+          <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
       </nav>
     </header>
     <main>
@@ -23,7 +23,9 @@
       </p>
     </main>
     <footer>
-      <p>My First Web Page 20XX &copy</p>
+      <p>My Web Page 20XX &copy</p>
+      <p class='main-para'>BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus Christ because students, faculty, and employees share a commitment to live the gospel.</p>
+
     </footer>
   </body>
 </html>
