--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,7 +10,7 @@
 <body>
         <header>
             <a id="logo_link" href="index.html">
-                    <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -20,12 +20,12 @@
            </nav>
         </header>
         <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
-            </div>
+        <div id="hero-box">
+        <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+        </div>
             <section id="hero-msg">
-                <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Dry Oar </h4>
+                <h1 class="home-title">Start Your Adventure</h1>
+                <h4>Make Memories with White Oar </h4>
                 <div class='button-box'>
                     <a class='book' href="contactus.html">Book Now</a>
                     <main class="home-grid">
@@ -53,7 +53,7 @@
                             </section>
                     </main>
         <footer>
-            <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
+            <p>White Oar &copy; 20XX - Joshua Pyle Jr</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
