--- a/education-pres-nelson.html
+++ b/education-pres-nelson.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education is the diffrence!</title>
+    <link rel="stylesheet" href="styles/education-style.css">
 </head>
 <body>
     <nav> 
-        <a id="education" href="https://www.churchofjesuschrist.org/church/news/what-will-you-choose-elder-nelson-asks-young-adults?lang=eng">Education</a>
+        <a id="education">Education</a>
     </nav>
     <p>
-        Education
-
+        <main class="text" id="first-part">
 Education is the difference between wishing you could help others & being able to help them
 <br>
 ---President Nelson
-<main>
+        </main>
+
+<main class="text" id="second-part">
 1.Faith in the Lord Jesus Christ
 <br>
 2.Repentance
@@ -25,13 +27,16 @@ Education is the difference between wishing you could help others & being able t
 <br>
 4.Laying on of hands for the gift of the Holy Ghost
 </main>
-<img id='Pres_Nelson' src=C:\projects\WDD130\Images\russell_nelson_official_portrait_2018.jpeg alt="President Nelson">
+<img class="image" id='Pres_Nelson' src=Images\russell_nelson_official_portrait_2018.jpeg alt="President Nelson">
 <br>
-    </p>
-    <footer>
+<div id="last-part" class="text">
 Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."
-<br>
+</div>    
+</p>
+<footer>
 Russell M. Nelson
+<br>
+Chruch of Jesus Crist of Latter Day Saints
     </footer>
 </body>
 </html>
