--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning.html">Positioning Activity</a>
   <a href="byui.html">byui.html</a>
+  <a href="education-pres-nelson.html">Pres. Nelson</a>
   <a href="#">Personal Siteplan</a>
   <a href="#">Personal Siteplan</a>
 </nav>  
