--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <h1>Welcome to WDD130 Web Projects</h1>
 <nav>
-  <a href="wwr/index.html">White Water Rafting Website</a>
+  <a href="index_rafting.html">White Water Rafting Website</a>
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning.html">Positioning Activity</a>
   <a href="byui.html">byui.html</a>
   <a href="education-pres-nelson.html">Pres. Nelson</a>
   <a href="#">Personal Siteplan</a>
   <a href="#">Personal Siteplan</a>
-  
+
 </nav>  
 <p> JT Pyle - WDD130</p>
 </body>
