--- a/index_rafting.html
+++ b/index_rafting.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE EDGE">
     <meta name="viewport" content='width=device-width, initial scale=1.0'>
         <title> The White Oar Home
-        <link rel="stylesheet" href="styles\styles.css">
         </title>
+        <link rel="stylesheet" href="styles\styles.css">
     </head>
 <body>
     <div id="content">
@@ -47,6 +47,7 @@
                                 <img class="icon" src="wwr/images/oars.png" alt="oars icon">
                                 <h2>Rapids</h2>
                             </section>
+                            <div id="background"></div> 
                             <img class="mountains" src="wwr/images/mountains.jpg" alt="Misty mountains">
                             <section class="msg">
                                 <h2>More Than Just The Thrill</h2>
@@ -55,8 +56,8 @@
                             </section>
                     </main>
         <footer>
-            <p>White Oar &copy; 20XX - Joshua Pyle Jr</p>
-            <p><a href="site-plan-rafting.html">Site Plan</a></p>
+            <p>White Oar Rafting! 2023 - Joshua Pyle Jr</p>
+            <p><a href="wwr\site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
             <a href="https://facebook.com" target="_blank">
