--- a/index_rafting.html
+++ b/index_rafting.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content='width=device-width, initial scale=1.0'>
         <title> The White Oar Home
         </title>
-        <link rel="stylesheet" href="styles\styles.css">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
 <body>
-    <div id="content">
         <header>
             <a id="logo_link" href="index.html">
             <img class="logo" src="wwr\images\logo.png" alt="Dry Oar Logo">
@@ -21,6 +20,7 @@
                 <a href="contactus.html">Contact Us</a>
            </nav>
         </header>
+<div id="content">
         <div id="hero">
         <div id="hero-box">
         <img id="hero-img" src="wwr/images/hero.png" alt="People enjoying white water rafting">
