--- a/index_rafting.html
+++ b/index_rafting.html
@@ -1,17 +1,17 @@
-<!DOCTYPE HTML>
-<html lang="en-us">
-    <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE EDGE">
-    <meta name="viewport" content='width=device-width, initial scale=1.0'>
-        <title> The White Oar Home
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title> The White Oar Home
         </title>
         <link rel="stylesheet" href="styles/styles.css">
     </head>
 <body>
         <header>
             <a id="logo_link" href="index.html">
-            <img class="logo" src="wwr\images\logo.png" alt="Dry Oar Logo">
+            <img class="logo" src="wwr/images/logo.png" alt="Dry Oar Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -57,7 +57,7 @@
                     </main>
         <footer>
             <p>White Oar Rafting! 2023 - Joshua Pyle Jr</p>
-            <p><a href="wwr\site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="wwr/site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
             <a href="https://facebook.com" target="_blank">
