--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <nav>
   <a href="index_rafting.html">White Water Rafting Website</a>
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-  <a href="positioning.html">Positioning Activity</a>
+  <a href="positioning\positioning.html">Positioning Activity</a>
   <a href="byui.html">byui.html</a>
   <a href="education-pres-nelson.html">Pres. Nelson</a>
-  <a href="#">Personal Siteplan</a>
+  <a href="positioning\positioning.html">positioning assignment</a>
   <a href="#">Personal Siteplan</a>
 
 </nav>  
