--- a/index_rafting.html
+++ b/index_rafting.html
@@ -9,23 +9,23 @@
         <link rel="stylesheet" href="styles/styles.css">
     </head>
 <body>
-        <header>
-            <a id="logo_link" href="index.html">
-            <img class="logo" src="wwr/images/logo.png" alt="Dry Oar Logo">
-            </a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
-                <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contactus.html">Contact Us</a>
-           </nav>
-        </header>
+    <header>
+        <a id="logo_link" href="index.html">
+            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#">Page 2</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
+        </nav>
+    </header>
 <div id="content">
         <div id="hero">
         <div id="hero-box">
         <img id="hero-img" src="wwr/images/hero.png" alt="People enjoying white water rafting">
         </div>
-            <section id="hero-msg">
+            <main id="hero-msg">
                 <h1 class="home-title">Start Your Adventure</h1>
                 <h4>Make Memories with White Oar </h4>
                 <div class='button-box'>
