--- a/rafting_child_pages/rivers_child_page.html
+++ b/rafting_child_pages/rivers_child_page.html
@@ -9,10 +9,11 @@
    
 <body>
     <header>
+        <h1> Child-Site-Plan-Here<a href="site-plan-rafting-child.html">Click Here</a></h1>
         <a id="logo_link" href="index.html">
             <img class="logo" src="Images\logo.png" alt="Dry Oar Logo"></a>
         <nav>
-            <a href="index_rafting.html">Home</a>
+            <a href="WDD130\index_rafting.html">Home</a>
             <a href="rafting_child_pages/rivers_child_page.html">Local Rivers</a>
             <a href="wwr/site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
@@ -65,5 +66,21 @@
             <a class='book' href="contactus.html">Book Now</a>
         </div>
     </div>
+    <footer>
+        <p>White Oar Rafting! 2023 - Joshua Pyle Jr</p>
+        <p><a href="wwr/site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="wwr/images/facebook.png" alt="fb icon">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="wwr/images/twitter.png" alt="twitter icon">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="wwr/images/instagram.png" alt="instagram icon">
+        </a>
+    </div>
+</footer>
 </body>
 </html>
