--- a/rafting_child_pages/index_rafting.html
+++ b/rafting_child_pages/index_rafting.html
@@ -13,7 +13,7 @@
         <a id="logo_link" href="index.html">
             <img class="logo" src="wwr/images/logo.png" alt="Dry Oar Logo"></a>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="index_rafting.html">Home</a>
             <a href="rafting_child_pages\rivers_child_page.html">Local Rivers</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
