--- a/rivers_child_page.html
+++ b/rivers_child_page.html
@@ -13,7 +13,7 @@
         <a id="logo_link" href="index.html">
             <img class="logo" src="Images\logo.png" alt="Dry Oar Logo"></a>
         <nav>
-            <a href="WDD130\index_rafting.html">Home</a>
+            <a href="index_rafting.html">Home</a>
             <a href="rafting_child_pages/rivers_child_page.html">Local Rivers</a>
             <a href="wwr/site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
