--- a/rafting_child_pages/site-plan-rafting-child.html
+++ b/rafting_child_pages/site-plan-rafting-child.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Cild Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="site-plan-rafting-child.css" />
+  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting-child.css" />
 </head>
 
 <body>
@@ -93,8 +93,7 @@
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="rivers_child_page.html">Local Rivers</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
@@ -115,13 +114,9 @@
     <h2>Wireframes</h2>
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
-    <h3>Home</h3>
+    <h3>Local Rivers</h3>
 
-    <img src="" alt="Wireframe for the child site" />
-
-    <h3>[Page 2]</h3>
-
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+   <img src="Images/child_page_wireframe.jpg" alt="page 2 wireframe">
   </main>
 </body>
 
