--- a/rivers_child_page.html
+++ b/rivers_child_page.html
@@ -9,7 +9,7 @@
    
 <body>
     <header>
-        <h1> Child-Site-Plan-Here<a href="site-plan-rafting-child.html">Click Here</a></h1>
+        <h1> Child-Site-Plan-Here<a href="rafting_child_pages\site-plan-rafting-child.html">Click Here</a></h1>
         <a id="logo_link" href="index.html">
             <img class="logo" src="Images\logo.png" alt="Dry Oar Logo"></a>
         <nav>
@@ -21,7 +21,7 @@
     </header> 
     <div id="content">
         <div id="main-photo-box">
-            <img id="main-photo-img" src="Images/white-water-rapids.png" alt="Beautiful River">
+            <img id="main-photo-img" src="rafting_child_pages/Images/white-water-rapids.png" alt="Beautiful River">
         </div>
         <section id="main-photo-msg">
             <h1 class="main-title">Local <br> River <br> Aventures </h1>
@@ -31,7 +31,7 @@
             </section>
             <section id="river-aventures">
             <div id="main-fork-River">
-                <img class="river-img" src="Images/salmon-river.jpg" alt="Salmon river">
+                <img class="river-img" src="rafting_child_pages/Images/salmon-river.jpg" alt="Salmon river">
                 <h2 class="heading-2">Main Fork River Idaho</h2>
                 <p class="river-aventure-p">
                     Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The Salmon was given the nickname long ago as the River of No Return by the people living near it because of the number of folks that came to visit and fell so in love with the rugged beauty of the river that they never left.
@@ -42,10 +42,10 @@
                 </p>
             </div>
             <div id="D&G-rapids">
-                <img class="river-img" src="Images/desolation.jpg" alt="Desolation Rapids">
+                <img class="river-img" src="rafting_child_pages/Images/desolation.jpg" alt="Desolation Rapids">
                 <h2 class="heading-2"> Desolation & Grey Canyon Utah</h2>
                 <p class="river-aventure-p">
-                    <img class="state-outline" src="Images/utah.jpg" alt="idaho-outline">
+                    <img class="state-outline" src="rafting_child_pages/Images/utah.jpg" alt="idaho-outline">
                     Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river flows towards the mighty Colorado river and the sea. High grey stone cliffs, beautiful desert scenery, and great rapids have made this run famous. This 84-mile trip runs from from Sand Wash to Swaseys Rapid (just outside Green River Utah) and boasts outstanding scenery, interesting geologic formations, evidence of prehistoric and historic human activity, and great whitewater opportunities.
                     <br> <br>
                     Desolation is rated a Class II/III and is usually done in 6 days
@@ -53,10 +53,10 @@
                     Desolation Canyon has been recognized as a National Landmark.  This designation is based on the uniqueness and rich history that the canyon tells.
                 </p>
             <div id="Owahee-River">
-                <img class="river-img" src="Images/owyhee.jpg" alt="Owyhee rapids">
+                <img class="river-img" src="rafting_child_pages/Images/owyhee.jpg" alt="Owyhee rapids">
                 <h2 class="heading-2">Owyhee River Oregan</h2>
                 <p class="river-aventure-p">
-                    <img class="state-outline" src="Images/oregan.jpg" alt="oregan-outline">
+                    <img class="state-outline" src="rafting_child_pages/Images/oregan.jpg" alt="oregan-outline">
                     The Owyhee River runs thru Oregons unofficial Grand Canyon, with high canyon walls and beautiful desert wilderness. If you don’t know where the Owyhee River is, it’s far away from everywhere. In the southeast corner of the state, along the Idaho border runs Owyhee River. With Oregon River Experiences, you can choose from 4 or 5 day vacations, rafting down III+ rapids, plus enjoying the local natural hot springs and seeing the petroglyphs carved on rocks alongside the river. This trip can only be taken in the Spring, when snowmelt raises the river high enough to navigate.
                     <br> Text copied from <a href="https://bestofthenorthwest.com/northwest-travel-ideas/9-rivers-great-for-rafting-in-oregon/#:~:text=9%20Best%20Rivers%20for%20Rafting%20in%20Oregon%201,...%208%20John%20Day%20River%20...%20More%20items">Best of the Northwest</a>
                 </p>
