--- a/rafting_child_pages/site-plan-rafting-child.html
+++ b/rafting_child_pages/site-plan-rafting-child.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Cild Site Plan</title>
+  <title>Child Site Plan</title>
   <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting-child.css" />
 </head>
 
@@ -115,7 +115,6 @@
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
     <h3>Local Rivers</h3>
-
    <img src="Images/child_page_wireframe.jpg" alt="page 2 wireframe">
   </main>
 </body>
