--- a/rafting_child_pages/site-plan-rafting-child.html
+++ b/rafting_child_pages/site-plan-rafting-child.html
@@ -97,11 +97,7 @@
       <a href="#">Contact Us</a>
     </nav>
     <hr />
-    <h2>Site Map</h2>
-    <div class="sitemap">
-      <div class="sm-home">Home</div>
-      <div class="sm-page2">
-        [Page2]
+        [River]
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
