--- a/index_rafting.html
+++ b/index_rafting.html
@@ -14,7 +14,7 @@
             <img class="logo" src="wwr/images/logo.png" alt="Dry Oar Logo"></a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="rafting_child_pages\rivers_child_page.html">Local Rivers</a>
+            <a href="rivers_child_page.html">Local Rivers</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
