--- a/rivers_child_page.html
+++ b/rivers_child_page.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Oar Local Rivers</title>
+    <link rel="stylesheet" href="rafting_child_pages/styles/child-page-style.css">
 </head>
    
 <body>
     <header>
-        <h1> Child-Site-Plan-Here<a href="rafting_child_pages\site-plan-rafting-child.html">Click Here</a></h1>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="Images\logo.png" alt="Dry Oar Logo"></a>
+            <img class="logo" src="rafting_child_pages/Images/logo.png" alt="Dry Oar Logo"></a>
         <nav>
-            <a href="index_rafting.html">Home</a>
-            <a href="rafting_child_pages/rivers_child_page.html">Local Rivers</a>
-            <a href="wwr/site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
+            <a id="home" href="index_rafting.html">Home</a>
+            <a id="local_rivers" href="rivers_child_page.html">Local Rivers</a>
+            <a id="site_plan" href="site-plan-rafting.html">Site Plan</a>
+            <a id="contact" href="contactus.html">Contact Us</a>
         </nav>
     </header> 
     <div id="content">
@@ -28,12 +28,13 @@
             <div class='button-box'>
                     <a class='book' href="contactus.html">Book Now</a>
             </div>
-            </section>
-            <section id="river-aventures">
+        </section>
+        <div id="river-aventures">
             <div id="main-fork-River">
                 <img class="river-img" src="rafting_child_pages/Images/salmon-river.jpg" alt="Salmon river">
                 <h2 class="heading-2">Main Fork River Idaho</h2>
                 <p class="river-aventure-p">
+                    <img class="state-outline" src="rafting_child_pages/Images/outline-of-idaho-36.jpg" alt="idaho-outline">
                     Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The Salmon was given the nickname long ago as the River of No Return by the people living near it because of the number of folks that came to visit and fell so in love with the rugged beauty of the river that they never left.
                     <br>
                     Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also commonly sighted. The river corridor is also lined with awe inspiring ponderosa pine which tower over the sandy beaches in the campsites and provide shelter from sun or rain when needed.
@@ -45,13 +46,14 @@
                 <img class="river-img" src="rafting_child_pages/Images/desolation.jpg" alt="Desolation Rapids">
                 <h2 class="heading-2"> Desolation & Grey Canyon Utah</h2>
                 <p class="river-aventure-p">
-                    <img class="state-outline" src="rafting_child_pages/Images/utah.jpg" alt="idaho-outline">
+                    <img class="state-outline" src="rafting_child_pages/Images/utah.jpg" alt="utah-outline">
                     Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river flows towards the mighty Colorado river and the sea. High grey stone cliffs, beautiful desert scenery, and great rapids have made this run famous. This 84-mile trip runs from from Sand Wash to Swaseys Rapid (just outside Green River Utah) and boasts outstanding scenery, interesting geologic formations, evidence of prehistoric and historic human activity, and great whitewater opportunities.
                     <br> <br>
                     Desolation is rated a Class II/III and is usually done in 6 days
                     <br> <br>
                     Desolation Canyon has been recognized as a National Landmark.  This designation is based on the uniqueness and rich history that the canyon tells.
                 </p>
+            </div>    
             <div id="Owahee-River">
                 <img class="river-img" src="rafting_child_pages/Images/owyhee.jpg" alt="Owyhee rapids">
                 <h2 class="heading-2">Owyhee River Oregan</h2>
@@ -61,7 +63,7 @@
                     <br> Text copied from <a href="https://bestofthenorthwest.com/northwest-travel-ideas/9-rivers-great-for-rafting-in-oregon/#:~:text=9%20Best%20Rivers%20for%20Rafting%20in%20Oregon%201,...%208%20John%20Day%20River%20...%20More%20items">Best of the Northwest</a>
                 </p>
             </div>
-        </section>
+        </div>
         <div class='button-box'>
             <a class='book' href="contactus.html">Book Now</a>
         </div>
