--- a/site-plan-rafting-child.html
+++ b/site-plan-rafting-child.html
@@ -17,7 +17,7 @@
   </header>
   <main>
     <!-- ------------------------Steps 2-5------------------------------ -->
-    <hr />
+    <hr>
     <h2>Overview</h2>
     <h3>Our Purpose: Is to bring aventure to the world!</h3>
     <p> Our goal is to make a fun aventure, This child page is Here to add information to booking aventures.</p>
@@ -111,7 +111,7 @@
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
     <h3>Local Rivers</h3>
-   <img src="Images/child_page_wireframe.jpg" alt="page 2 wireframe">
+   <img src="rafting_child_pages\Images\child_page_wireframe.jpg" alt="page 2 wireframe">
   </main>
 </body>
 
